--- a/actions/fibo_action/package.xml
+++ b/actions/fibo_action/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>action_tutorials_py</name>
+  <name>fibo_action</name>
   <version>0.20.3</version>
   <description>Python action tutorial code</description>
 
@@ -13,7 +13,7 @@
   <author email="jacob@openrobotics.org">Jacob Perron</author>
   <author email="mabel@openrobotics.org">Mabel Zhang</author>
 
-  <depend>action_tutorials_interfaces</depend>
+  <depend>fibo_interfaces</depend>
 
   <exec_depend>rclpy</exec_depend>
 
